feat(login): update layout to mobile and use antdmobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
 body {
-  margin: 0;
-  font-family: 'Inter', sans-serif !important;
-  font-family: 'Poppins', sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -9,4 +6,26 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:root:root {
+  --adm-color-primary: #794DFD;
+  --adm-color-success: #00b578;
+  --adm-color-warning: #ff8f1f;
+  --adm-color-danger: #ff3141;
+
+  --adm-color-white: #ffffff;
+  --adm-color-text: #fff;
+  --adm-color-text-secondary: #fff;
+  --adm-color-weak: #fff;
+  --adm-color-light: #cccccc;
+  --adm-color-border: #eeeeee;
+  --adm-color-box: #f5f5f5;
+
+  --adm-color-neutral-800: #313033;
+  --adm-color-background: #1C1B1E;
+
+  --adm-font-size-15: 28px;
+  --adm-font-family: 'Inter',
+    sans-serif !important;
 }
